--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
                 <div class="col-lg-3 my-5 glow-time">
                     <h4>GlowTime</h4>
-                    <p class="my-4 text-wrap w-50">Get in Touch with Us for the Best Quality Epoxy Resin Handmade Clocks.
+                    <p class="my-4 text-wrap w-50">Get in Touch with Us for the Best Quality Epoxy Resin Handmade
+                        Clocks.
                     </p>
                     <a href=""><img src="" alt=""> <img src="" alt="">Follow On Social Media</a>
 
@@ -50,28 +51,28 @@
                     <h5>Shop By Categories</h5>
 
                     <div class="my-4">
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Marble Textured Resin Clock
                         </a>
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Ocean theme Resin Clock
                         </a>
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Alcoholic ink Resin Clock
                         </a>
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Geode Resin Clock
                         </a>
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Vastu Resin Clock
                         </a>
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Evil Eye Resin Clock
                         </a>
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Flower Resin Clock
                         </a>
-                        <a class="d-block" href="">
+                        <a class="my-2 d-block" href="">
                             Mantra Resin Clock
                         </a>
                     </div>
@@ -80,18 +81,40 @@
 
                 <div class="col-lg-3 my-5">
                     <h5>Shop By Price</h5>
-                    <div>
-                        <a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a><a href=""></a>
+                    <div class="my-4">
+                        <a class="my-2 d-block" href="">Economical ( upto 3000 INR )</a>
+                        <a class="my-2 d-block" href="">Best Seller ( upto 7000 INR )</a>
+                        <a class="my-2 d-block" href="">Premium ( Above 10,000 INR )</a>
+                        <a class="my-2 d-block" href="">Small Resin Clocks</a>
+                        <a class="my-2 d-block" href="">Regualr/Medium Resin Clocks</a>
+                        <a class="my-2 d-block" href="">Big/Large Resin Clocks</a>
                     </div>
+
+
+
+
                 </div>
 
                 <div class="col-lg-3 my-5">
                     <h5>Quick Links</h5>
+                    <div class="my-4">
+                        <a class="my-2 d-block" href="">Products</a>
+                        <a class="my-2 d-block" href="">About us</a>
+                        <a class="my-2 d-block" href="">Resin Clocks Making Process</a>
+                        <a class="my-2 d-block" href="">Reviews</a>
+                        <a class="my-2 d-block" href="">Blogs</a>
+                        <a class="my-2 d-block" href="">Contact us</a>
+                        <a class="my-2 d-block" href="">Privacy Policy</a>
+                        <a class="my-2 d-block" href="">Shipping Policy</a>
+                        <a class="my-2 d-block" href="">Refund and Returns Policy</a>
+                        <a class="d-block" href="">Terms And Conditions</a>
+                    </div>
                 </div>
+
             </div>
 
-
         </div>
+        <hr class="hr">
         <div class="justify-content-center align-items-center text-center">
             <h6>Copyright © 2025 | GlowTime By Sonali</h6>
         </div>
